# weather-bot

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  sync_with_poetry_config.json
.github/ISSUE_TEMPLATE/: issue-as-a-task.md
docs/: README.md  architectural-characteristics.md  development-details.md  stakeholders.md  technical-requirements.md
docs/decisions/: 001-continue-development-by-making-v2-from-scratch.md  009-forecast-content.md  README.md  template.md
docs/decisions/development/: 002-choose-db-sqlite.md  003-package-for-telegram-api-telephon.md  003-package-for-telegram-api-telethon.md  004-interaction-with-telegram-api-mtproto.md  004-interaction-with-telegram-api.md  005-http-client-httpx.md  006-package-for-location-geopy.md  007-linter-andformatter-ruff.md  008-package-manager-pdm_and_venv.md  010-task-runner-make.md  011-static-type-checker-pyright.md  012-serialization-and-validation-.md  012-serialization-and-validation-msgspec.md  013-logging.md  014-change-serialization-package-to-mashumaro.md
src/: callbacks.py  config.py  constants.py  handlers.py  main.py  owm_api.py  schemas.py  weather_services.py
src/constants/: messages.py  owm_api.py
src/telegram/: helpers.py
tests/: conftest.py  constants.py  fixtures.py
tests/integration/: test_main.py  test_owm_api.py  test_schemas__integration.py
tests/unit/: test_owm_api.py  test_schemas.py  test_telegram_helpers.py
