[project]
name = "weather-bot"
version = "2.0.0-alpha"
description = "Telegram Bot with weather forecasts from OpenWeatherMap API"
authors = [
    {name = "Vadim Nifadev", email = "makemenu_flash@simplelogin.com"},
]
dependencies = [
    "telethon>=1.34.0",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
plugins = [
    "sync-pre-commit-lock"
]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.6.1",
]

[tool.sync-pre-commit-lock]
# Run `pre-commit install` automatically if applicable
automaticall-install-hooks = false

[tool.typos]
type.svg.extend-glob = ["*.svg"]
type.svg.check-file = false
